--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/{{ name }}",
+  "name": "@timmac/{{ name }}",
   "private": true,
   "version": "0.1.0",
   "exports": {
@@ -22,16 +22,16 @@
   "dependencies": {
   },
   "devDependencies": {
-    "@acme/eslint-config": "0.2.0",
-    "@acme/prettier-config": "^0.1.0",
-    "@acme/tsconfig": "^0.1.0",
+    "@timmac/eslint-config": "0.2.0",
+    "@timmac/prettier-config": "^0.1.0",
+    "@timmac/tsconfig": "^0.1.0",
     "eslint": "^8.47.0",
     "typescript": "^5.1.6"
   },
   "eslintConfig": {
     "extends": [
-      "@acme/eslint-config/base"
+      "@timmac/eslint-config/base"
     ]
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@timmac/prettier-config"
 }
