--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -6,10 +6,10 @@
 @font-face {
   font-family: "Coolvetica";
   src:
-    url("../../public/fonts/coolvetica_compressed_hv.eot?") format("eot"),
-    url("../../public/fonts/coolvetica_compressed_hv.woff") format("woff"),
-    url("../../public/fonts/coolvetica_compressed_hv.ttf") format("truetype"),
-    url("../../public/fonts/coolvetica_compressed_hv.svg#CoolveticaCompressedHv-Regular")
+    url("../public/fonts/coolvetica_compressed_hv.eot?") format("eot"),
+    url("../public/fonts/coolvetica_compressed_hv.woff") format("woff"),
+    url("../public/fonts/coolvetica_compressed_hv.ttf") format("truetype"),
+    url("../public/fonts/coolvetica_compressed_hv.svg#CoolveticaCompressedHv-Regular")
       format("svg");
   font-weight: normal;
   font-style: normal;
